--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/styles/style.css"
             ],
             
-            "scripts": ["node_modules/@fortawesome/fontawesome-free/css/all.js"],
+            "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -98,7 +98,7 @@
                  "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.css"
             ],
-            "scripts": [ "node_modules/@fortawesome/fontawesome-free/css/all.js"]
+            "scripts": []
           }
         }
       }
