--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+                "node_modules/aos/dist/aos.css",
                 "node_modules/swiper/swiper-bundle.min.css",
                 "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "src/styles.css",
@@ -94,9 +95,11 @@
               }
             ],
             "styles": [
+                "node_modules/aos/dist/aos.css",
                 "node_modules/swiper/swiper-bundle.min.css",
                  "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "src/styles.css"
+              "src/styles.css",
+               "src/styles/style.css"
             ],
             "scripts": []
           }
