--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "aos": "^2.3.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.2.10",
     "@angular/cli": "^18.2.10",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/aos": "^3.0.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
