--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "aos": "^2.3.4",
     "express": "^4.18.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
     "tslib": "^2.3.0",
