--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@nguniversal/express-engine": "^7.0.2",
     "aos": "^2.3.4",
     "express": "^4.18.2",
     "ngx-pagination": "^6.0.3",
