--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-headless-wp": "node dist/angular-headless-wp/server/server.mjs"
+    "build:ssr": "ng build && ng run angular-headless-wp:server", 
+    "serve:ssr:angular-headless-wp": "node dist/angular-headless-wp/server/server.mjs",    
+    "prerender": "ng run angular-headless-wp:prerender"
   },
   "private": true,
   "dependencies": {
