--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ssr": "ng build && ng run angular-headless-wp:server",
-    "serve:ssr:angular-headless-wp": "node dist/angular-headless-wp/server/server.mjs",
-    "prerender": "ng run angular-headless-wp:prerender"
+    "serve:ssr:angular-headless-wp": "node dist/angular-headless-wp/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.2.15",
     "@angular/platform-server": "^19.2.15",
     "@angular/router": "^19.2.15",
-    "@angular/ssr": "^18.2.10",
+    "@angular/ssr": "^19.2.17",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@nguniversal/express-engine": "^7.0.2",
     "aos": "^2.3.4",
@@ -34,8 +32,8 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.10",
-    "@angular/cli": "^18.2.10",
+    "@angular-devkit/build-angular": "^19.2.17",
+    "@angular/cli": "^19.2.17",
     "@angular/compiler-cli": "^19.2.15",
     "@types/aos": "^3.0.7",
     "@types/express": "^4.17.17",
