--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "Kenny-Weiss",
+  "name": "angular-headless-wp",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:angular-headless-wp": "node dist/angular-headless-wp/server/server.mjs"
-  },
+"scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build",
+  "build:ssr:angular-headless-wp": "ng build angular-headless-wp && ng run angular-headless-wp:server",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test",
+  "serve:ssr:angular-headless-wp": "node dist/angular-headless-wp/server/server.mjs"
+},
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.15",
-    "@angular/common": "^19.2.15",
-    "@angular/compiler": "^19.2.15",
-    "@angular/core": "^19.2.15",
-    "@angular/forms": "^19.2.15",
-    "@angular/platform-browser": "^19.2.15",
-    "@angular/platform-browser-dynamic": "^19.2.15",
-    "@angular/platform-server": "^19.2.15",
-    "@angular/router": "^19.2.15",
-    "@angular/ssr": "^19.2.17",
+    "@angular/animations": "^20.3.2",
+    "@angular/common": "^20.3.2",
+    "@angular/compiler": "^20.3.2",
+    "@angular/core": "^20.3.2",
+    "@angular/forms": "^20.3.2",
+    "@angular/platform-browser": "^20.3.2",
+    "@angular/platform-browser-dynamic": "^20.3.2",
+    "@angular/platform-server": "^20.3.2",
+    "@angular/router": "^20.3.2",
+    "@angular/ssr": "^20.3.3",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@nguniversal/express-engine": "^7.0.2",
     "aos": "^2.3.4",
@@ -32,9 +33,9 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.17",
-    "@angular/cli": "^19.2.17",
-    "@angular/compiler-cli": "^19.2.15",
+    "@angular-devkit/build-angular": "^20.3.3",
+    "@angular/cli": "^20.3.3",
+    "@angular/compiler-cli": "^20.3.2",
     "@types/aos": "^3.0.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
@@ -46,6 +47,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.9.2"
   }
 }
